--- a/style.css
+++ b/style.css
@@ -10481,7 +10481,8 @@ textarea {
       margin-top: 4px;
       margin-right: 10px; }
 
-.wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit, .fsForm.fsForm .fsSubmitButton.fsSubmitButton {
+.wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit,
+.fsForm.fsForm .fsSubmitButton.fsSubmitButton {
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -10509,26 +10510,37 @@ textarea {
   color: var(--white-color);
   max-width: 385px;
   width: 100%; }
-  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span, .fsForm.fsForm .fsSubmitButton.fsSubmitButton span {
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton span {
     position: relative;
     z-index: 1; }
-    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span:not(:last-child), .fsForm.fsForm .fsSubmitButton.fsSubmitButton span:not(:last-child) {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span:not(:last-child),
+    .fsForm.fsForm .fsSubmitButton.fsSubmitButton span:not(:last-child) {
       margin-right: 0.75rem; }
-    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span.icon, .fsForm.fsForm .fsSubmitButton.fsSubmitButton span.icon {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit span.icon,
+    .fsForm.fsForm .fsSubmitButton.fsSubmitButton span.icon {
       margin-top: -3px; }
-  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:not(.nav-link), .fsForm.fsForm .fsSubmitButton.fsSubmitButton:not(.nav-link) {
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:not(.nav-link),
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton:not(.nav-link) {
     border: 2px solid transparent;
     padding: 10px 1.5rem; }
-  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nav-link, .fsForm.fsForm .fsSubmitButton.fsSubmitButton.nav-link {
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nav-link,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton.nav-link {
     padding: 10px 1.5rem;
     border: 1px solid transparent; }
   @media screen and (min-width: 992px) {
-    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit, .fsForm.fsForm .fsSubmitButton.fsSubmitButton {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit,
+    .fsForm.fsForm .fsSubmitButton.fsSubmitButton {
       white-space: nowrap; } }
   @media screen and (max-width: 767px) {
-    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit, .fsForm.fsForm .fsSubmitButton.fsSubmitButton {
+    .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit,
+    .fsForm.fsForm .fsSubmitButton.fsSubmitButton {
       padding: 1rem 1.5rem; } }
-  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:hover, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:active, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nice-select.open, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:focus, .fsForm.fsForm .fsSubmitButton.fsSubmitButton:hover, .fsForm.fsForm .fsSubmitButton.fsSubmitButton:active, .fsForm.fsForm .fsSubmitButton.fsSubmitButton.nice-select.open, .fsForm.fsForm .fsSubmitButton.fsSubmitButton:focus {
+  .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:hover, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:active, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit.nice-select.open, .wpcf7-form.wpcf7-form .wpcf7-submit.wpcf7-submit.wpcf7-submit:focus,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton:hover,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton:active,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton.nice-select.open,
+  .fsForm.fsForm .fsSubmitButton.fsSubmitButton:focus {
     background-color: var(--accent-color); }
 
 @media screen and (max-width: 991px) {
@@ -10537,7 +10549,10 @@ textarea {
     opacity: 1 !important;
     visibility: visible; } }
 
-.fsForm {
+.fsBody.fsBody.fsBody > div {
+  padding: 0; }
+.fsBody.fsBody.fsBody .fsForm {
+  padding: 0;
   font-family: var(--primary-font); }
 
 .fsRequiredMarker {
